
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bgipykernel"
version = "0.1.0"
description = "Alternative IPythonKernel with concurrent cell running in jupyter using %bg and await"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dror Speiser", email = "drorspei@gmail.com"},
]
keywords = ["ipython", "%bg", "ipykernel", "jupyter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/drorspei/bgipykernel"
Repository = "https://github.com/drorspei/bgipykernel"

[tool.hatch.build.targets.wheel]
packages = ["bgipykernel"]
